--- a/src/assets/bib/2011-Montevil-Temps-Biologique-These.bib
+++ b/src/assets/bib/2011-Montevil-Temps-Biologique-These.bib
@@ -38,6 +38,7 @@
 		  l'organisme, qui combine un grand nombre des aspects
 		  préalablement exposés.},
   day		= {7},
+  note		= {\url{https://montevil.org/publications/books/2011-Montevil-Temps-Biologique-These/}},
   keywords	= {criticité, symmétries, historicité, variabilité, temps
 		  biologique, organisme, mesure, renormalisation},
   url		= {http://www.theses.fr/2011PA05T020}
