--- a/src/assets/bib/2012-Montevil-Geometrie-Temps-Biologique.bib
+++ b/src/assets/bib/2012-Montevil-Geometrie-Temps-Biologique.bib
@@ -7,7 +7,7 @@
   day		= {25},
   editor	= {A. bonnet and F. Nicolas and T. Paul},
   month		= jan,
-  note		= {Article invité},
+  note		= {\url{https://montevil.org/publications/chapters/2012-Montevil-Geometrie-Temps-Biologique/}},
   publisher	= {Hermann},
   abstract	= {Le vivant possède une phénoménalité particulière et
 		  originale. Comme cadre et siège de cette phénoménalité,
