--- a/src/assets/bib/2017-LM-Logic-Physics-Biology.bib
+++ b/src/assets/bib/2017-LM-Logic-Physics-Biology.bib
@@ -29,6 +29,7 @@
   copyright	= {Attribution-NoDerivs 2.0 Generic},
   doi		= {10.23638/LMCS-13(4:21)2017},
   eprint	= {https://montevil.org/assets/pdf/2017-LM-Logic-Physics-Biology.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2017-LM-Logic-Physics-Biology/}},
   issue		= {4},
   keywords	= {Incompleteness, symmetries, randomness, critical
 		  transitions, biological evolution and ontogenesis},
