--- a/src/assets/bib/2018-ML-Big-Data-Biology-ISLS.bib
+++ b/src/assets/bib/2018-ML-Big-Data-Biology-ISLS.bib
@@ -29,6 +29,7 @@
   booktitle	= {Life Sciences, Information Sciences},
   doi		= {10.1002/9781119452713.ch22},
   eprint	= {https://montevil.org/assets/pdf/2018-ML-Big-Data-Biology.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2018-ML-Big-Data-Biology/}},
   keywords	= {big data, biology, carcinogenesis process, combinatory
 		  theory, ergodic theory, immense digital databases, Ramsey
 		  theory},
