--- a/src/assets/bib/2020-Montevil-Historicity-Heart-Biology.bib
+++ b/src/assets/bib/2020-Montevil-Historicity-Heart-Biology.bib
@@ -24,6 +24,7 @@
 		  requires specific rationales.},
   doi		= {10.1007/s12064-020-00320-8},
   eprint	= {https://montevil.org/assets/pdf/2020-Montevil-Historicity-Heart-Biology.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2020-Montevil-Historicity-Heart-Biology/}},
   keywords	= {Historicity, Organization, Epistemology, Mathematical
 		  modeling, Constraints},
   language	= {english},
