--- a/src/assets/bib/2020-Montevil-Turing-Biology.bib
+++ b/src/assets/bib/2020-Montevil-Turing-Biology.bib
@@ -27,6 +27,7 @@
 		  pratique théorique que pour l'interprétation des
 		  protocoles et résultats expérimentaux.},
   issue		= {1},
+  note		= {\url{https://montevil.org/publications/articles/2020-Montevil-Turing-Biology/}},
   keywords	= {anti-entropie, entropie, épistémologie, historicité,
 		  morphogenèse, Turing},
   url		= {https://intellectica.org/fr/de-l-oeuvre-de-turing-aux-defis-contemporains-pour-la-comprehension-mathematique-du-vivant}
