--- a/src/assets/bib/2011-BLM-2D-Time-Biology.bib
+++ b/src/assets/bib/2011-BLM-2D-Time-Biology.bib
@@ -34,6 +34,7 @@
 		  cognitive significance.},
   doi		= {10.1016/j.pbiomolbio.2011.02.001},
   eprint	= {https://montevil.org/assets/pdf/2011-BLM-2D-Time-Biology.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2011-BLM-2D-Time-Biology/}},
   keywords	= {Biological rhythms, Allometry, Biological rhythms,
 		  Circadian rhythms, Heartbeats, Rate variability},
   language	= {english},
