--- a/src/assets/bib/2011-LM-Biology-Extending-Criticality.bib
+++ b/src/assets/bib/2011-LM-Biology-Extending-Criticality.bib
@@ -31,6 +31,7 @@
 		  transitions.},
   doi		= {10.1016/j.pbiomolbio.2011.03.005},
   eprint	= {https://montevil.org/assets/pdf/2011-LM-Biology-Extending-Criticality.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2011-LM-Biology-Extending-Criticality/}},
   keywords	= {Symmetries, Systems biology, Critical transitions, Levels
 		  of organization, Hidden variables, Coherent structures,
 		  downward causation},
