--- a/src/assets/bib/2011-LM-Protention-Retention-Biology.bib
+++ b/src/assets/bib/2011-LM-Protention-Retention-Biology.bib
@@ -25,6 +25,7 @@
 		  Paris, France},
   doi		= {10.1007/s12064-010-0116-6},
   eprint	= {https://montevil.org/assets/pdf/2011-LM-Protention-Retention-Biology.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2011-LM-Protention-Retention-Biology/}},
   issue		= {2},
   keywords	= {Memory and Cognition, protention, retention, biological
 		  time},
