--- a/src/assets/bib/2014-PMF-Ecological-Models-Cells-Genes.bib
+++ b/src/assets/bib/2014-PMF-Ecological-Models-Cells-Genes.bib
@@ -28,6 +28,7 @@
 		  the extension of ecology to intraorganismal ecology.},
   doi		= {10.1007/s13752-014-0191-x},
   eprint	= {https://montevil.org/assets/pdf/2014-PMF-Ecological-Models-Cells-Genes.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2014-PMF-Ecological-Models-Cells-Genes/}},
   keywords	= {Adenosine deaminase deficiency, Ecosystem engineering,
 		  Gene therapy, Intraorganismal ecology, Nongenetic
 		  inheritance, Severe combined immunodeficiency},
