--- a/src/assets/bib/2018-ML-Big-Data-Biology.bib
+++ b/src/assets/bib/2018-ML-Big-Data-Biology.bib
@@ -29,6 +29,7 @@
   booktitle	= {Life Sciences, Information Sciences},
   doi		= {10.1002/9781119452713.ch22},
   eprint	= {https://montevil.org/assets/pdf/2018-ML-Big-Data-Biology.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2018-ML-Big-Data-Biology/}},
   keywords	= {big data, biology, carcinogenesis process, combinatory
 		  theory, ergodic theory, immense digital databases, Ramsey
 		  theory},
@@ -57,7 +58,8 @@
 		  understand lifecycles. Among other benefits, such a theory
 		  should make explicit what we can and cannot predict in
 		  principle.},
-  eprint	= {https://montevil.org/assets/pdf/2018-ML-BigDataBiological.pdf},
+  eprint	= {https://montevil.org/assets/pdf/2018-ML-Big-Data-Biology.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2018-ML-Big-Data-Biology/}},
   isbn		= {978 88 8080 313 3},
   keywords	= {Big Data, biological variation, cancer biology, knowledge,
 		  theory},
