--- a/src/assets/bib/2018-MLS-Gene-Century-Organism.bib
+++ b/src/assets/bib/2018-MLS-Gene-Century-Organism.bib
@@ -32,6 +32,7 @@
   booktitle	= {Life Sciences, Information Sciences},
   doi		= {10.1002/9781119452713.ch9},
   eprint	= {https://montevil.org/assets/pdf/2018-MLS-Gene-Century-Organism.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2018-MLS-Gene-Century-Organism/}},
   keywords	= {cell theory, evolution biology, mathematical structures,
 		  organism biology, philosophical position, physical
 		  theories, theoretical symmetries},
