--- a/src/assets/bib/2019-Montevil-First-Principles-Biology.bib
+++ b/src/assets/bib/2019-Montevil-First-Principles-Biology.bib
@@ -1,6 +1,7 @@
 
 @Article{	  2019-montevil-first-principles-biology,
   eprint	= {https://montevil.org/assets/pdf/2019-Montevil-First-Principles-Biology.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2019-Montevil-First-Principles-Biology/}},
   author	= {Maël Montévil},
   journal	= {Rendiconti di Matematica e delle sue Applicazioni},
   title		= {Which first principles for mathematical modelling in
