--- a/src/assets/bib/2019-Montevil-Measurement-Biology-Theory.bib
+++ b/src/assets/bib/2019-Montevil-Measurement-Biology-Theory.bib
@@ -28,6 +28,7 @@
 		  on biological diversity.},
   doi		= {10.1007/s10539-019-9687-x},
   eprint	= {https://montevil.org/assets/pdf/2019-Montevil-Measurement-Biology-Theory.pdf},
+  note		= {\url{https://montevil.org/publications/articles/2019-Montevil-Measurement-Biology-Theory/}},
   keywords	= {Biological measurement, evolution, experiments, strains,
 		  symmetry, systematics},
   language	= {english},
