--- a/src/assets/bib/2021-Sens-Formes-biologie.bib
+++ b/src/assets/bib/2021-Sens-Formes-biologie.bib
@@ -1,6 +1,7 @@
 
 @InBook{	  2021-sens-formes-biologie,
   eprint	= {https://montevil.org/assets/pdf/2021-Sens-Formes-biologie.pdf},
+  note		= {\url{https://montevil.org/publications/chapters/2021-Sens-Formes-biologie/}},
   author	= {Maël Montévil},
   publisher	= {NAIMA},
   title		= {Le sens des formes en biologie},
