--- a/src/assets/bib/2021-Sens-Formes-biologie.bib
+++ b/src/assets/bib/2021-Sens-Formes-biologie.bib
@@ -6,7 +6,7 @@
   publisher	= {NAIMA},
   title		= {Le sens des formes en biologie},
   language	= {french},
-  year		= {Submitted},
+  year		= {2021},
   abstract	= {Dans l'interface entre biologie et mathématiques, les
 		  formes et les processus de morphogenèse sont souvent
 		  étudiées pour eux-mêmes. Nous pensons que cette manière
@@ -23,5 +23,10 @@
 		  tant au niveau de la théorie qu'au niveau de la
 		  compréhension de l'accès expérimental aux objets
 		  biologiques.},
-  booktitle	= {Biomorphisme}
+  booktitle	= {Biomorphisme. Approches sensibles et conceptuelles des
+		  formes du vivant},
+  page		= {514-553},
+  editor	= {David Romand and Julien Bernard and Sylvie Pic and Jean
+		  Arnaud},
+  url		= {https://www.naimaunlimited.com/biblio/biomorphisme-approches-sensibles-et-conceptuelles-des-formes-du-vivant/}
 }
