--- a/src/assets/bib/2023-Montevil-chance-randomness-biology.bib
+++ b/src/assets/bib/2023-Montevil-chance-randomness-biology.bib
@@ -4,7 +4,7 @@
   title		= {How does randomness shape the living?},
   language	= {en},
   year		= {2023},
-  booktitle	= {Figures of Chance},
+  booktitle	= {Figuring Chance: Questions of Theory},
   editor	= {Anne Duprat and others},
   abstract	= {Physics has several concepts of randomness that build on
 		  the idea that the possibilities are pre-given. By contrast,
@@ -22,5 +22,6 @@
 		  illustration, we argue that a critical issue of the
 		  Anthropocene is the disruption of the biological
 		  organizations that natural history has shaped, leading to a
-		  collapse of biological possibilities.}
+		  collapse of biological possibilities.},
+  publisher	= {Routledge}
 }
