--- a/src/assets/bib/2023-Montevil-chance-randomness-biology.bib
+++ b/src/assets/bib/2023-Montevil-chance-randomness-biology.bib
@@ -3,7 +3,7 @@
   author	= {Ma{\"e}l Mont{\'e}vil},
   title		= {How does randomness shape the living?},
   language	= {en},
-  year		= {2023},
+  year		= {to appear},
   booktitle	= {Figuring Chance: Questions of Theory},
   editor	= {Anne Duprat and others},
   abstract	= {Physics has several concepts of randomness that build on
