--- a/src/assets/bib/2011-Montevil-Temps-Biologique-These.bib
+++ b/src/assets/bib/2011-Montevil-Temps-Biologique-These.bib
@@ -41,5 +41,5 @@
   note		= {\url{https://montevil.org/publications/books/2011-Montevil-Temps-Biologique-These/}},
   keywords	= {criticité, symmétries, historicité, variabilité, temps
 		  biologique, organisme, mesure, renormalisation},
-  url		= {http://www.theses.fr/2011PA05T020}
+  url		= {https://hal.science/tel-04514335}
 }
