--- a/src/assets/bib/2023-Montevil-chance-hasard-biologie.bib
+++ b/src/assets/bib/2023-Montevil-chance-hasard-biologie.bib
@@ -4,8 +4,9 @@
   title		= {Comment le hasard façonne le vivant ?},
   language	= {fr},
   year		= {to appear},
-  booktitle	= {Figurer le hasard : questions de théorie},
-  editor	= {Anne Duprat and others},
+  booktitle	= {Figures du Hasard },
+  editor	= {Anne Duprat and Fiona Mcintosh-Varjabédian and
+		  Anne-Gaëlle Weber and Alison James and Divya Dwivedi},
   abstract	= {La physique possède plusieurs concepts de hasard qui
 		  reposent néanmoins tous sur l'idée que les possibilités
 		  sont données d'avance. En revanche, un nombre croissant de
@@ -25,5 +26,6 @@
 		  qu'une question cruciale de l'Anthropocène est la
 		  disruption des organisations biologiques que l'histoire
 		  naturelle a structurées, conduisant à un effondrement des
-		  possibilités biologiques.}
+		  possibilités biologiques.},
+  publisher	= {CNRS éditions}
 }
