--- a/src/assets/bib/2023-Montevil-chance-randomness-biology.bib
+++ b/src/assets/bib/2023-Montevil-chance-randomness-biology.bib
@@ -3,9 +3,11 @@
   author	= {Ma{\"e}l Mont{\'e}vil},
   title		= {How does randomness shape the living?},
   language	= {en},
-  year		= {to appear},
-  booktitle	= {Figuring Chance: Questions of Theory},
-  editor	= {Anne Duprat and others},
+  year		= {2024},
+  month		= {7},
+  day		= {31},
+  booktitle	= {Figures of Chance II Chance in Theory and Practice},
+  editor	= {Anne Duprat and Alison James and Divya Dwivedi},
   abstract	= {Physics has several concepts of randomness that build on
 		  the idea that the possibilities are pre-given. By contrast,
 		  an increasing number of theoretical biologists attempt to
