--- a/src/assets/bib/2019-Montevil-Measurement-Biology-Theory.bib
+++ b/src/assets/bib/2019-Montevil-Measurement-Biology-Theory.bib
@@ -29,8 +29,8 @@
   doi		= {10.1007/s10539-019-9687-x},
   eprint	= {https://montevil.org/assets/pdf/2019-Montevil-Measurement-Biology-Theory.pdf},
   note		= {\url{https://montevil.org/publications/articles/2019-Montevil-Measurement-Biology-Theory/}},
-  keywords	= {Biological measurement, evolution, experiments, strains,
-		  symmetry, systematics},
+  keywords	= {measurement, evolution, experiments, strains, symmetry,
+		  systematics},
   language	= {english},
   publisher	= {Springer Science and Business Media {LLC}}
 }
