--- a/src/assets/bib/2011-Montevil-Temps-Biologique-These.bib
+++ b/src/assets/bib/2011-Montevil-Temps-Biologique-These.bib
@@ -40,6 +40,6 @@
   day		= {7},
   note		= {\url{https://montevil.org/publications/books/2011-Montevil-Temps-Biologique-These/}},
   keywords	= {criticité, symmétries, historicité, variabilité, temps
-		  biologique, organisme, mesure, renormalisation},
+		  biologique, organisms, mesure, renormalization},
   url		= {https://hal.science/tel-04514335}
 }
