--- a/src/assets/bib/2011-LM-Protention-Retention-Biology.bib
+++ b/src/assets/bib/2011-LM-Protention-Retention-Biology.bib
@@ -3,10 +3,11 @@
   author	= {Longo, G. and Montévil, Maël},
   journal	= {Theory in Biosciences},
   title		= {Protention and retention in biological systems},
-  year		= {2011},
+  year		= {2010},
   day		= {30},
-  issn		= {1431-7613},
+  issn		= {1611-7530},
   month		= nov,
+  note		= {\url{https://montevil.org/publications/articles/2011-LM-Protention-Retention-Biology/}},
   number	= {2},
   pages		= {107--117},
   volume	= {130},
@@ -25,10 +26,9 @@
 		  Paris, France},
   doi		= {10.1007/s12064-010-0116-6},
   eprint	= {https://montevil.org/assets/pdf/2011-LM-Protention-Retention-Biology.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2011-LM-Protention-Retention-Biology/}},
   issue		= {2},
   keywords	= {Memory and Cognition, protention, retention, biological
 		  time},
   language	= {english},
-  publisher	= {Springer Berlin / Heidelberg}
+  publisher	= {Springer Science and Business Media LLC}
 }
