--- a/src/assets/bib/2012-Montevil-Geometrie-Temps-Biologique.bib
+++ b/src/assets/bib/2012-Montevil-Geometrie-Temps-Biologique.bib
@@ -1,14 +1,14 @@
 
 @InBook{	  2012-montevil-geometrie-temps-biologique,
   author	= {Montévil, Maël},
-  booktitle	= {Questions de phrasé},
+  editor	= {A. bonnet and F. Nicolas and T. Paul},
+  publisher	= {Editions Hermann},
   title		= {Géométrie du temps biologique : rythmes et protension},
   year		= {2012},
   day		= {25},
-  editor	= {A. bonnet and F. Nicolas and T. Paul},
+  isbn		= {9782705681555},
   month		= jan,
-  note		= {\url{https://montevil.org/publications/chapters/2012-Montevil-Geometrie-Temps-Biologique/}},
-  publisher	= {Hermann},
+  note		= {Article invité},
   abstract	= {Le vivant possède une phénoménalité particulière et
 		  originale. Comme cadre et siège de cette phénoménalité,
 		  l’organisation temporelle des organismes est elle-même
@@ -25,8 +25,8 @@
 		  ces phénomènes, de les considérer dans un cadre où la
 		  question de la temporalité soit abordée de manière
 		  adéquate.},
+  booktitle	= {Questions de phrasé},
   eprint	= {https://montevil.org/assets/pdf/2012-Montevil-Geometrie-Temps-Biologique.pdf},
-  isbn		= {978-2705681555},
   language	= {english},
   owner		= {kamome},
   timestamp	= {2010.05.12},
