--- a/src/assets/bib/2014-PMF-Ecological-Models-Cells-Genes.bib
+++ b/src/assets/bib/2014-PMF-Ecological-Models-Cells-Genes.bib
@@ -7,8 +7,9 @@
 		  Perturbations},
   year		= {2014},
   day		= {25},
-  issn		= {1555-5542},
-  month		= {nov},
+  issn		= {1555-5550},
+  month		= nov,
+  note		= {\url{https://montevil.org/publications/articles/2014-PMF-Ecological-Models-Cells-Genes/}},
   number	= {4},
   pages		= {414--422},
   volume	= {9},
@@ -28,10 +29,9 @@
 		  the extension of ecology to intraorganismal ecology.},
   doi		= {10.1007/s13752-014-0191-x},
   eprint	= {https://montevil.org/assets/pdf/2014-PMF-Ecological-Models-Cells-Genes.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2014-PMF-Ecological-Models-Cells-Genes/}},
   keywords	= {Adenosine deaminase deficiency, Ecosystem engineering,
 		  Gene therapy, Intraorganismal ecology, Nongenetic
 		  inheritance, Severe combined immunodeficiency},
   language	= {english},
-  publisher	= {Springer Netherlands}
+  publisher	= {Springer Science and Business Media LLC}
 }
