--- a/src/assets/bib/2018-MLS-Gene-Century-Organism.bib
+++ b/src/assets/bib/2018-MLS-Gene-Century-Organism.bib
@@ -9,9 +9,12 @@
   title		= {From the Century of the Gene to that of the Organism:
 		  Introduction to New Theoretical Perspectives},
   year		= {2018},
+  address	= {London},
   day		= {25},
   isbn		= {9781119452713},
   month		= {mar},
+  note		= {\url{https://montevil.org/publications/chapters/2018-MLS-Gene-Century-Organism/}},
+  series	= {Information systems, web and pervasive computing series},
   abstract	= {Summary This chapter briefly presents and describes the
 		  three main principles that the group proposes for a theory
 		  of organisms, namely: the default state, proliferation with
@@ -32,9 +35,11 @@
   booktitle	= {Life Sciences, Information Sciences},
   doi		= {10.1002/9781119452713.ch9},
   eprint	= {https://montevil.org/assets/pdf/2018-MLS-Gene-Century-Organism.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2018-MLS-Gene-Century-Organism/}},
   keywords	= {cell theory, evolution biology, mathematical structures,
 		  organism biology, philosophical position, physical
 		  theories, theoretical symmetries},
-  language	= {english}
+  language	= {english},
+  pagetotal	= {11},
+  ppn_gvk	= {1679260375},
+  subtitle	= {Cerisy SVSI (Conference)}
 }
