--- a/src/assets/bib/2019-Montevil-First-Principles-Biology.bib
+++ b/src/assets/bib/2019-Montevil-First-Principles-Biology.bib
@@ -1,13 +1,13 @@
 
 @Article{	  2019-montevil-first-principles-biology,
-  eprint	= {https://montevil.org/assets/pdf/2019-Montevil-First-Principles-Biology.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2019-Montevil-First-Principles-Biology/}},
   author	= {Maël Montévil},
   journal	= {Rendiconti di Matematica e delle sue Applicazioni},
   title		= {Which first principles for mathematical modelling in
 		  biology?},
-  language	= {english},
   year		= {2019},
+  issn		= {11207183},
+  note		= {\url{https://montevil.org/publications/articles/2019-Montevil-First-Principles-Biology/}},
+  number	= {3-4},
   pages		= {177--189},
   volume	= {40},
   abstract	= {Like theoretical physics, theoretical biology is not just
@@ -29,8 +29,10 @@
 		  of perspective leads to reconsider the meaning of
 		  measurements and the structure of the space of
 		  description.},
+  eprint	= {https://montevil.org/assets/pdf/2019-Montevil-First-Principles-Biology.pdf},
   issue		= {3-4},
   keywords	= {Allometry, first principles, Historicity, invariants,
 		  theoretical biology, Variability},
+  language	= {english},
   url		= {http://www1.mat.uniroma1.it/ricerca/rendiconti/40_3-4_(2019)_177-189.html}
 }
