--- a/src/assets/bib/2020-Montevil-Historicity-Heart-Biology.bib
+++ b/src/assets/bib/2020-Montevil-Historicity-Heart-Biology.bib
@@ -7,6 +7,9 @@
   day		= {01},
   issn		= {1611-7530},
   month		= jul,
+  number	= {2},
+  pages		= {165--173},
+  volume	= {141},
   abstract	= {Most mathematical modeling in biology relies either
 		  implicitly or explicitly on the epistemology of physics.
 		  The underlying conception is that the historicity of
@@ -23,10 +26,7 @@
 		  biology. Their proper theoretical and empirical use
 		  requires specific rationales.},
   doi		= {10.1007/s12064-020-00320-8},
-  eprint	= {https://montevil.org/assets/pdf/2020-Montevil-Historicity-Heart-Biology.pdf},
-  note		= {\url{https://montevil.org/publications/articles/2020-Montevil-Historicity-Heart-Biology/}},
   keywords	= {Historicity, Organization, Epistemology, Mathematical
 		  modeling, Constraints},
-  language	= {english},
-  publisher	= {Springer Science and Business Media {LLC}}
+  publisher	= {Springer Science and Business Media LLC}
 }
