--- a/src/assets/bib/2021-Sens-Formes-biologie.bib
+++ b/src/assets/bib/2021-Sens-Formes-biologie.bib
@@ -1,12 +1,13 @@
 
 @InBook{	  2021-sens-formes-biologie,
-  eprint	= {https://montevil.org/assets/pdf/2021-Sens-Formes-biologie.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2021-Sens-Formes-biologie/}},
   author	= {Maël Montévil},
+  editor	= {David Romand and Julien Bernard and Sylvie Pic and Jean
+		  Arnaud},
   publisher	= {NAIMA},
   title		= {Le sens des formes en biologie},
-  language	= {french},
   year		= {2021},
+  isbn		= {9782374401232},
+  note		= {\url{https://montevil.org/publications/chapters/2021-Sens-Formes-biologie/}},
   abstract	= {Dans l'interface entre biologie et mathématiques, les
 		  formes et les processus de morphogenèse sont souvent
 		  étudiées pour eux-mêmes. Nous pensons que cette manière
@@ -25,8 +26,8 @@
 		  biologiques.},
   booktitle	= {Biomorphisme. Approches sensibles et conceptuelles des
 		  formes du vivant},
+  eprint	= {https://montevil.org/assets/pdf/2021-Sens-Formes-biologie.pdf},
+  language	= {french},
   page		= {514-553},
-  editor	= {David Romand and Julien Bernard and Sylvie Pic and Jean
-		  Arnaud},
   url		= {https://www.naimaunlimited.com/biblio/biomorphisme-approches-sensibles-et-conceptuelles-des-formes-du-vivant/}
 }
