--- a/src/assets/bib/2023-Montevil-chance-randomness-biology.bib
+++ b/src/assets/bib/2023-Montevil-chance-randomness-biology.bib
@@ -1,13 +1,13 @@
 
 @InBook{	  2023-montevil-chance-randomness-biology,
   author	= {Ma{\"e}l Mont{\'e}vil},
-  title		= {How does randomness shape the living?},
-  language	= {en},
-  year		= {2024},
-  month		= {7},
-  day		= {31},
-  booktitle	= {Figures of Chance II Chance in Theory and Practice},
   editor	= {Anne Duprat and Alison James and Divya Dwivedi},
+  publisher	= {Taylor & Francis},
+  title		= {How does randomness shape the living?},
+  year		= {2025},
+  day		= {31},
+  isbn		= {9781032358666},
+  month		= {7},
   abstract	= {Physics has several concepts of randomness that build on
 		  the idea that the possibilities are pre-given. By contrast,
 		  an increasing number of theoretical biologists attempt to
@@ -25,5 +25,7 @@
 		  Anthropocene is the disruption of the biological
 		  organizations that natural history has shaped, leading to a
 		  collapse of biological possibilities.},
-  publisher	= {Routledge}
+  booktitle	= {Figures of Chance II Chance in Theory and Practice},
+  language	= {en},
+  ppn_gvk	= {1904850855}
 }
