--- a/src/assets/bib/2024-Montevil-Jeu-Biologie.bib
+++ b/src/assets/bib/2024-Montevil-Jeu-Biologie.bib
@@ -9,5 +9,14 @@
   booktitle	= {Jeux, gestes et savoirs},
   language	= {fr},
   pusblisher	= {C&F Editions},
-  collection	= {Collection du nouveau monde industriel}
+  collection	= {Collection du nouveau monde industriel},
+  page		= {87-98},
+  abstract	= {La dix-septième édition des Entretiens du Nouveau Monde
+		  Industriel apporte un éclairage théorique, historique et
+		  épistémologique sur le pouvoir du jeu. Cet ouvrage
+		  mobilise les apports théoriques des sciences du vivant, de
+		  la psychologie, de l'économie, de la philosophie ou des
+		  sciences du jeu, aussi bien que des comptes-rendus
+		  d'expérimentations de terrain.},
+  isbn		= {9782376620891}
 }
