--- a/src/assets/bib/2018-ML-Big-Data-Biology-ISLS.bib
+++ b/src/assets/bib/2018-ML-Big-Data-Biology-ISLS.bib
@@ -2,13 +2,18 @@
 @InBook{	  2018-ml-big-data-biology-isls,
   author	= {Longo, Giuseppe and Montévil, Maël},
   chapter	= {22},
+  editor	= {Dominique Lacroix and Jean-Charles Pomerol and
+		  Marie-Christine Maurel and Thierry Gaudin},
   pages		= {243--248},
-  publisher	= {John Wiley \& Sons, Ltd},
+  publisher	= {Wiley},
   title		= {Big Data, Knowledge and Biology},
   year		= {2018},
+  address	= {London},
   day		= {25},
   isbn		= {9781119452713},
-  month		= {mar},
+  month		= mar,
+  note		= {\url{https://montevil.org/publications/chapters/2018-ML-Big-Data-Biology/}},
+  series	= {Information systems, web and pervasive computing series},
   abstract	= {Summary Biology is a field in which variation has a
 		  fundamental theoretical role. Faced with the diversity of
 		  the living and faced with the internal heterogeneity of
@@ -29,9 +34,11 @@
   booktitle	= {Life Sciences, Information Sciences},
   doi		= {10.1002/9781119452713.ch22},
   eprint	= {https://montevil.org/assets/pdf/2018-ML-Big-Data-Biology.pdf},
-  note		= {\url{https://montevil.org/publications/chapters/2018-ML-Big-Data-Biology/}},
   keywords	= {big data, biology, carcinogenesis process, combinatory
 		  theory, ergodic theory, immense digital databases, Ramsey
 		  theory},
-  language	= {english}
+  language	= {english},
+  pagetotal	= {11},
+  ppn_gvk	= {1679260375},
+  subtitle	= {Cerisy SVSI (Conference)}
 }
