--- a/src/assets/bib/2023-Montevil-chance-hasard-biologie.bib
+++ b/src/assets/bib/2023-Montevil-chance-hasard-biologie.bib
@@ -3,10 +3,16 @@
   author	= {Ma{\"e}l Mont{\'e}vil},
   title		= {Comment le hasard façonne le vivant ?},
   language	= {fr},
-  year		= {to appear},
-  booktitle	= {Figures du Hasard },
-  editor	= {Anne Duprat and Fiona Mcintosh-Varjabédian and
-		  Anne-Gaëlle Weber and Alison James and Divya Dwivedi},
+  booktitle	= {Le hasard. Littérature, arts, sciences, philosophie},
+  editor	= {Anne Duprat and Fiona McIntosh‑Varjabédian and
+		  Anne‑Gaëlle Weber and Alison James},
+  publisher	= {CNRS Éditions},
+  address	= {Paris, France},
+  year		= {2025},
+  month		= apr,
+  pages		= {505-516},
+  isbn		= {978-2-271-14455-3},
+  url		= {https://www.cnrseditions.fr/catalogue/philosophie-et-histoire-des-idees/le-hasard/},
   abstract	= {La physique possède plusieurs concepts de hasard qui
 		  reposent néanmoins tous sur l'idée que les possibilités
 		  sont données d'avance. En revanche, un nombre croissant de
@@ -26,6 +32,5 @@
 		  qu'une question cruciale de l'Anthropocène est la
 		  disruption des organisations biologiques que l'histoire
 		  naturelle a structurées, conduisant à un effondrement des
-		  possibilités biologiques.},
-  publisher	= {CNRS éditions}
+		  possibilités biologiques.}
 }
