--- a/src/assets/bib/2023-Montevil-chance-randomness-biology.bib
+++ b/src/assets/bib/2023-Montevil-chance-randomness-biology.bib
@@ -1,8 +1,7 @@
 
 @InBook{	  2023-montevil-chance-randomness-biology,
   author	= {Ma{\"e}l Mont{\'e}vil},
-  editor	= {Anne Duprat and Alison James and Divya Dwivedi},
-  publisher	= {Taylor & Francis},
+  editor	= {Anne Duprat and Alison James},
   title		= {How does randomness shape the living?},
   year		= {2025},
   day		= {31},
@@ -25,7 +24,12 @@
 		  Anthropocene is the disruption of the biological
 		  organizations that natural history has shaped, leading to a
 		  collapse of biological possibilities.},
-  booktitle	= {Figures of Chance II Chance in Theory and Practice},
+  booktitle	= {Figures of Chance II Chance: in Theory and Practice},
   language	= {en},
-  ppn_gvk	= {1904850855}
+  ppn_gvk	= {1904850855},
+  publisher	= {Routledge},
+  address	= {London / New York},
+  doi		= {10.4324/9781003329060-4},
+  url		= {https://www.routledge.com/Figures-of-Chance-II-Chance-in-Theory-and-Practice/Duprat-James/p/book/9781032358659},
+  pages		= {477--531}
 }
