--- a/src/assets/bib/2024-Montevil-Jeu-Biologie.bib
+++ b/src/assets/bib/2024-Montevil-Jeu-Biologie.bib
@@ -1,15 +1,19 @@
 
 @InBook{	  2024-montevil-jeu-biologie,
   author	= {Montévil, Maël},
-  editor	= {Franck Cormerais and Vincent Puig and Mathieu Triclot},
   title		= {Le vivant et le jeu},
+  booktitle	= {Jeux, gestes \& savoirs: Jouer, une puissance
+		  d'émancipation dans un monde de calcul},
+  editor	= {Mathieu Triclot and Vincent Puig and Franck Cormerais},
+  series	= {Les Entretiens du nouveau monde industriel (ENMI)},
+  volume	= {17},
   year		= {2024},
-  month		= {12},
-  day		= {1},
-  booktitle	= {Jeux, gestes et savoirs},
-  language	= {fr},
-  pusblisher	= {C&F Editions},
-  collection	= {Collection du nouveau monde industriel},
+  publisher	= {C\&F\,Éditions},
+  address	= {Caen, France},
+  pages		= {286},
+  day		= 28,
+  month		= 11,
+  isbn		= {978‑2‑37662‑089‑1},
   page		= {87-98},
   abstract	= {La dix-septième édition des Entretiens du Nouveau Monde
 		  Industriel apporte un éclairage théorique, historique et
@@ -18,5 +22,5 @@
 		  la psychologie, de l'économie, de la philosophie ou des
 		  sciences du jeu, aussi bien que des comptes-rendus
 		  d'expérimentations de terrain.},
-  isbn		= {9782376620891}
+  url		= {https://cfeditions.com/jeux-gestes-savoirs/}
 }
